<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_name">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="message_content">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="theme_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="recipient_address">kosnikovskii1993@gmail.com</string>
    <string name="link_to_course">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="app_choose">Выберите приложение</string>
    <string name="link_to_user_agreement">https://yandex.ru/legal/practicum_offer/</string>

    <string name="track_name1">Smells Like Teen Spirit</string>
    <string name="artist_name1">Nirvana</string>
    <string name="track_time1">5:01</string>
    <string name="track_link1">https://is5–ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a–2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>

    <string name="track_name2">Billie Jean</string>
    <string name="artist_name2">Michael Jackson</string>
    <string name="track_time2">4:35</string>
    <string name="track_link2">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>

    <string name="track_name3">Stayin\' Alive</string>
    <string name="artist_name3">Bee Gees</string>
    <string name="track_time3">4:10</string>
    <string name="track_link3">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>

    <string name="track_name4">Whole Lotta Love</string>
    <string name="artist_name4">Led Zeppelin</string>
    <string name="track_time4">5:33</string>
    <string name="track_link4">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>

    <string name="track_name5">Sweet Child O\'Mine</string>
    <string name="artist_name5">Guns N\' Roses</string>
    <string name="track_time5">5:03</string>
    <string name="track_link5">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>

</resources>