<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_screen"
    style="@style/ActivitySettings"
    android:orientation="vertical"
    tools:context="">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        style="@style/Toolbar">

        <TextView
            style="@style/ToolbarTitle"
            android:text="@string/settings_button" />


    </com.google.android.material.appbar.MaterialToolbar>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switcher"
        style="@style/ThemeSwitch"
        android:text="@string/dark_mode" />

    <TextView
        android:id="@+id/share_app"
        style="@style/SettingTextView"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/write_to_support"
        style="@style/SettingTextView"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/agreement"
        style="@style/SettingTextView"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/ic_next_24" />


</LinearLayout>
