<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        style="@style/Toolbar"
        app:navigationIcon="@drawable/back"
        app:navigationIconTint="@color/black">

        <TextView
            style="@style/ToolbarTitle"
            android:text="@string/settings_button"
            android:textColor="@color/black" />


    </com.google.android.material.appbar.MaterialToolbar>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/margin_16"
        android:paddingVertical="@dimen/margin_20"
        android:text="@string/dark_mode"
        android:textSize="@dimen/text_size_16" />


    <TextView
        android:text="@string/share_app"
        style="@style/SettingTextView"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:text="@string/write_to_support"
        style="@style/SettingTextView"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:text="@string/user_agreement"
        style="@style/SettingTextView"
        app:drawableEndCompat="@drawable/next" />


</LinearLayout>
