<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity"
    style="@style/ActivityMain">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/Toolbar"
        android:layout_gravity="start"
        style="@style/Toolbar">

        <TextView
            android:text="@string/app_name"
            android:textColor="@color/white"
            style="@style/ToolbarTitle" />

    </com.google.android.material.appbar.MaterialToolbar>

    <Button
        android:id="@+id/search_button"
        android:text="@string/search_button"
        app:icon="@drawable/search"
        style="@style/SettingButton"
        />

    <Button
        android:id="@+id/media_button"
        android:text="@string/media_button"
        app:icon="@drawable/media"
        style="@style/SettingButton"
        />

    <Button
        android:id="@+id/settings_button"
        android:text="@string/settings_button"
        app:icon="@drawable/settings"
        style="@style/SettingButton"
        android:layout_marginBottom="28dp"/>

</LinearLayout>

    